[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Solana MEV Bot for arbitrage across multiple DEXs"

[workspace]
members = [
    ".",
    "crates/meteora-damm-cpi",
    "crates/meteora-vault-cpi",
]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Solana Core
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"

# Anchor Framework (for CPI and program interaction)
anchor-lang = "0.30"
anchor-spl = "0.30"

# Local CPI Crates
meteora-damm-cpi = { path = "crates/meteora-damm-cpi" }
meteora-vault-cpi = { path = "crates/meteora-vault-cpi" }

# SPL Token
spl-token = "4.0"
spl-associated-token-account = "2.3"

# DEX SDKs and Interfaces
# Note: These may need to be added as git dependencies or local paths
# raydium-library = { git = "https://github.com/raydium-io/raydium-sdk" }
# whirlpool = { git = "https://github.com/orca-so/whirlpools" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = { version = "1.5", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "6.0"
# Alternative: cached = "0.46"

# HTTP Client (for API calls)
reqwest = { version = "0.12", features = ["json"] }
hyper = "1.0"

# Retry Logic
backoff = { version = "0.4", features = ["tokio"] }

# Random Number Generation (for jitter in retry logic)
rand = "0.8"

# Cryptography
bs58 = "0.5"
base64 = "0.21"

# Numeric Operations
rust_decimal = "1.33"
num-traits = "0.2"
num-bigint = "0.4"

# Time and Date
chrono = "0.4"

# Metrics (optional, for monitoring)
prometheus = { version = "0.13", optional = true }

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
tokio-stream = "0.1.17"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
tempfile = "3.8"
solana-program-test = "1.18"
solana-test-validator = "1.18"
serial_test = "3.0"  # For serializing integration tests

[features]
default = []
metrics = ["prometheus"]
cli = ["clap"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[lib]
name = "solana_mev_bot"
path = "src/lib.rs"

[[bin]]
name = "mev-bot"
path = "src/main.rs"
